[package]
name = "projection"
version = "0.1.0"
authors = ["Kaveh Karimi <kaveh.ka@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
geojson = "0.16.0"
helpers = { path = "../helpers" }
meta = { path = "../meta" }
serde_json = "1.0.41"

[dev-dependencies]
utils = { path = "../utils" }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
